change deployment files namespace

--- a/.deploy/deployment.yml
+++ b/.deploy/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: node-hello-world
-  namespace: differ
+  namespace: default
   labels:
     app: node-hello-world
 spec:
