--- a/.deploy/ingress.yml
+++ b/.deploy/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: node-hello-world-ingress
-  namespace: default
+  namespace: differ
   labels:
     app: node-hello-world
   annotations:
