--- a/.deploy/service.yml
+++ b/.deploy/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: node-hello-world-service
-  namespace: default
+  namespace: differ
 spec:
   selector:
     app: node-hello-world
